--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,6 +1,6 @@
 <% layout("layout/boilerplate")%>
 <div class="row">
-    <h1 class="text-center">New Campground</h1>
+    <h1 class="text-center">New Campgrounds</h1>
     <div class="col-6 offset-3">
         <form action="/campgrounds" method="POST" class="validated-form" novalidate>
             <div class="mb-3">
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="mb-3">
-                <label for="price" class="form-label">Campground Price</label>
+                <label for="price" class="form-label">Campgrounds Price</label>
                 <div class="input-group">
                     <span class="input-group-text" id="price-label">$</span>
                     <input type="text" class="form-control" id="price" placeholder="0.00" aria-describedby="price-label" name="campground[price]" required>
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="mb-3">
-                <button class="btn btn-success">Add Campground</button>
+                <button class="btn btn-success">Add Campgrounds</button>
             </div>
 
         </form>
