--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -3,7 +3,8 @@
 <div class="row">
     <h1 class="text-center">Edit Campgrounds</h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST" novalidate class="validated-form">
+        <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST" novalidate class="validated-form"
+              enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
                 <input class="form-control" type="text" id="title" name="campground[title]" value="<%=campground.title%>" required>
@@ -18,13 +19,7 @@
                     Looks good!
                 </div>
             </div>
-            <div class="mb-3">
-                <label class="form-label" for="image">image URL</label>
-                <input class="form-control" type="text" id="image" name="campground[image]" value="<%=campground.image%>" required>
-                <div class="valid-feedback">
-                    Looks good!
-                </div>
-            </div>
+
             <div class="mb-3">
                 <label for="price" class="form-label">Campgrounds Price</label>
                 <div class="input-group">
@@ -43,6 +38,19 @@
                 <div class="valid-feedback">
                     Looks good!
                 </div>
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="image">Add Images</label>
+                <input type="file" name="image" id="image" multiple>
+            </div>
+            <div class="mb-3">
+                <% campground.images.forEach(function (img, i) {  %>
+                    <img src="<%= img.thumbnail %>" class="img-thumbnail" alt="">
+                    <div class="form-check-inline">
+                        <input type="checkbox" id="image-<%=i%>" name="deleteImages[]" value="<%=img.filename%>">
+                    </div>
+                    <label for="image-<%=i%>">Delete</label>
+                <%})%>
             </div>
             <div class="mb-3">
                 <button class="btn btn-info">Update Campgrounds</button>
