--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,8 +1,9 @@
 <% layout("layout/boilerplate")%>
+<link rel="stylesheet" href="/stylesheets/images.css" class="rel">
 <div class="row">
     <h1 class="text-center">New Campgrounds</h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds" method="POST" class="validated-form" novalidate>
+        <form action="/campgrounds" method="POST" class="validated-form" novalidate enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
                 <input class="form-control" type="text" id="title" name="campground[title]" required>
@@ -17,13 +18,9 @@
                     Looks good!
                 </div>
             </div>
-            <div class="mb-3">
-                <label class="form-label" for="image">image URL</label>
-                <input class="form-control" type="text" id="image" name="campground[image]" required>
-                <div class="valid-feedback">
-                    Looks good!
-                </div>
-            </div>
+
+
+
             <div class="mb-3">
                 <label for="price" class="form-label">Campgrounds Price</label>
                 <div class="input-group">
@@ -40,7 +37,14 @@
                 <div class="valid-feedback">
                     Looks good!
                 </div>
+
             </div>
+            <div class="mb-3">
+                <label for="image" class="form-label">Choose image(s)</label>
+                <input class="form-control" type="file" id="imageUpload" name="image" multiple>
+                <div class="mt-3" id="formFile"></div>
+            </div>
+
             <div class="mb-3">
                 <button class="btn btn-success">Add Campgrounds</button>
             </div>
